// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task row renders task row 1`] = `
<a
  className="container selected highPriority compressed"
  href="/foo/bar/task-id"
  onClick={[Function]}
>
  <div
    className="title"
  >
    Task Title
  </div>
  <div
    className="meta"
  >
    <div
      className="followers"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-1 icon avatar small"
        focusable="false"
        onClick={undefined}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
        />
      </svg>
    </div>
    <div
      className="dateSection openedAt openedAtSection"
    >
      <span
        className="dateLabel"
      >
        Opened
        :
      </span>
      <span
        className="dateValue"
      >
        in 2 months
      </span>
    </div>
    <div
      className="dateSection"
    >
      <span
        className="dateLabel"
      >
        Due
        :
      </span>
      <span
        className="dateValue"
      >
        Sep 7, 2017
      </span>
    </div>
  </div>
</a>
`;

exports[`task row renders task row with multiple followers 1`] = `
<a
  className="container selected highPriority compressed"
  href="/foo/bar/task-id"
  onClick={[Function]}
>
  <div
    className="title"
  >
    Task Title
  </div>
  <div
    className="meta"
  >
    <div
      className="followers"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-1 icon avatar small"
        focusable="false"
        onClick={undefined}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
        />
      </svg>
      <div
        className="follower"
      >
        +2
      </div>
    </div>
    <div
      className="dateSection openedAt openedAtSection"
    >
      <span
        className="dateLabel"
      >
        Opened
        :
      </span>
      <span
        className="dateValue"
      >
        in 2 months
      </span>
    </div>
    <div
      className="dateSection"
    >
      <span
        className="dateLabel"
      >
        Due
        :
      </span>
      <span
        className="dateValue"
      >
        Sep 7, 2017
      </span>
    </div>
  </div>
</a>
`;
